Bug 1339986 - Handle export* when checking for duplicate export. r=jonco